--- a/manifest.json
+++ b/manifest.json
@@ -2,8 +2,13 @@
     "manifest_version": 3,
     "name": "discord.js.org Prettier",
     "description": "Reduce padding, change colours, etc.",
-    "author":"Shane4368",
-    "version": "0.1.0",
+    "author": "Shane4368",
+    "version": "0.2.0",
+    "icons": {
+        "16": "images/icon16.png",
+        "48": "images/icon48.png",
+        "128": "images/icon128.png"
+    },
     "content_scripts": [
         {
             "matches": ["https://discord.js.org/*"],
